k8s/webUI/ls_service.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ls-algorithm-webUI
spec:
  selector:
    matchLabels:
      app: ls-algorithm-webUI
  template:
    metadata:
      labels:
        app: ls-algorithm-webUI
    spec:
      serviceAccountName: ls-service-account
      containers:
        - name: ls-algorithm
          image: giovaz94/local_scaling
          imagePullPolicy: Always
          ports:
            - containerPort: 7001
---
apiVersion: v1
kind: Service
metadata:
  name: ls-algorithm-webUI-service
spec:
  selector:
    app: ls-algorithm-webUI
  ports:
    - protocol: TCP
      port: 7000
      targetPort: 7000
