k8s/webUI/webUI.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webui
spec:
  selector:
    matchLabels:
      app: webui
  template:
    metadata:
      labels:
        app: webui
    spec:
      containers:
      - name: webui
        image: giovaz94/tea-store-general
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 80
      restartPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: webui-service
  annotations:
    prometheus.io/scrape: "true"
    prometheus.io/port: "80"
    prometheus.io/path: "/metrics"
spec:
  type: NodePort
  selector:
    app: webui
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
    nodePort: 31000
---
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: webui-service
spec:
spec:
  host: webui-service
  trafficPolicy:
    loadBalancer:
      simple: LEAST_REQUEST
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: webui-service
spec:
  hosts:
    - webui-service
  http:
    - route:
        - destination:
            host: webui-service
